# late-context-heads

./: .gitignore  README.md  RESULTS.md  device_diag.sh  pyproject.toml
results/: README.md
results/1_copy__synthetic__llama-3.2-3b/: config.yaml
results/1_copy__synthetic__llama-3.2-3b/options_first/: top_heads.json  vwa_main_columns.json
results/1_copy__synthetic__llama-3.2-3b/question_first/: top_heads.json
results/2_semantic__vocab__llama-3.2-3b-instruct/: config.yaml
results/2_semantic__vocab__llama-3.2-3b-instruct/options_first/: top_heads.json  vwa_main_columns.json  vwa_per_head_columns.json
results/2_semantic__vocab__llama-3.2-3b-instruct/question_first/: direct_effect_labels.json  top_heads.json
results/3_real-qa__arc-easy__llama-3.1-70b-instruct/: config.yaml
results/3_real-qa__arc-easy__llama-3.1-70b-instruct/options_first/: top_heads.json
results/3_real-qa__arc-easy__llama-3.1-70b-instruct/question_first/: direct_effect_labels.json  top_heads.json  vwa_per_head_columns.json
src/mcqa_head_finding/: __init__.py  accuracy.py  correctness.py  data.py  direct_effect.py  model.py  prompts.py  run.py  summary_graphic.py  token_types.py  value_weighted_attention.py  viz.py
tests/: device_diag.py  smoke_test.py
